Closed
Bug 1619068
Opened 5 years ago
Closed 5 years ago
Perma Bustage build/src/js/src/shell/js.cpp:5461:27: error: unknown type name 'CompilationInfo'; did you mean 'js::frontend::CompilationInfo'? when Gecko 75 merges to Beta on 2020-03-09
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
mozilla75
Tracking | Status | |
---|---|---|
firefox73 | --- | unaffected |
firefox74 | --- | unaffected |
firefox75 | + | verified |
People
(Reporter: bogdan_tara, Assigned: arai)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Central as Beta simulation.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=eccd10c790d5034556a4a17fba9a0e63465d50f0&selectedJob=291094624
https://treeherder.mozilla.org/#/jobs?repo=try&revision=aaf058a5c281a2f08558d04e4a869e11f8773704&selectedJob=291094855
Failure log:
[task 2020-02-29T11:58:32.890Z] 11:58:32 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/mfbt/tests'
[task 2020-02-29T11:58:34.620Z] 11:58:34 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/shell'
[task 2020-02-29T11:58:34.620Z] 11:58:34 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -o Unified_cpp_js_src_shell0.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DMOZ_HAS_MOZGLUE -DWASM_SUPPORTS_HUGE_MEMORY -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -Dtopsrcdir=/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/js/src/shell -I/builds/worker/workspace/build/src/obj-firefox/js/src/shell -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-noexcept-type -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/build/src/obj-firefox/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -MD -MP -MF .deps/Unified_cpp_js_src_shell0.o.pp Unified_cpp_js_src_shell0.cpp
[task 2020-02-29T11:58:34.620Z] 11:58:34 INFO - In file included from Unified_cpp_js_src_shell0.cpp:11:
[task 2020-02-29T11:58:34.621Z] 11:58:34 ERROR - /builds/worker/workspace/build/src/js/src/shell/js.cpp:5461:27: error: unknown type name 'CompilationInfo'; did you mean 'js::frontend::CompilationInfo'?
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - CompilationInfo& compilationInfo,
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - ^~~~~~~~~~~~~~~
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - js::frontend::CompilationInfo
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - /builds/worker/workspace/build/src/js/src/frontend/CompilationInfo.h:30:17: note: 'js::frontend::CompilationInfo' declared here
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - struct MOZ_RAII CompilationInfo {
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - ^
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - 1 error generated.
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - /builds/worker/workspace/build/src/config/rules.mk:745: recipe for target 'Unified_cpp_js_src_shell0.o' failed
[task 2020-02-29T11:58:34.621Z] 11:58:34 ERROR - make[4]: *** [Unified_cpp_js_src_shell0.o] Error 1
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/shell'
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - /builds/worker/workspace/build/src/config/recurse.mk:74: recipe for target 'js/src/shell/target-objects' failed
[task 2020-02-29T11:58:34.621Z] 11:58:34 ERROR - make[3]: *** [js/src/shell/target-objects] Error 2
[task 2020-02-29T11:58:34.621Z] 11:58:34 INFO - make[3]: *** Waiting for unfinished jobs....
[task 2020-02-29T11:58:34.641Z] 11:58:34 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/mfbt'
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → arai.unmht
Status: NEW → ASSIGNED
Flags: needinfo?(arai.unmht)
Assignee | ||
Comment 3•5 years ago
|
||
Pushed by arai_a@mac.com:
https://hg.mozilla.org/integration/autoland/rev/326c5a753027
Do not use `using js::frontend::*` in js/src/shell/js.cpp. r=Yoric
Comment 5•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Comment hidden (Intermittent Failures Robot) |
Comment 7•5 years ago
|
||
Verified fix in today's beta-sim: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=success%2Cbusted%2Cexception%2Crunnable&revision=686cd3312492ebab1a98d0a807714fe47da96884&searchStr=build
Status: RESOLVED → VERIFIED
Updated•5 years ago
|
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•