Bug 1619068 - Do not use `using js::frontend::*` in js/src/shell/js.cpp. r=Yoric

Differential Revision: https://phabricator.services.mozilla.com/D64865